# anonymeter

./: .editorconfig  .flake8  .gitattributes  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
anonymeter/evaluators/: __init__.py  inference_evaluator.py  linkability_evaluator.py  singling_out_evaluator.py
anonymeter/neighbors/: mixed_types_kneighbors.py
anonymeter/preprocessing/: transformations.py  type_detection.py
anonymeter/stats/: confidence.py
notebooks/: anonymeter_example.ipynb
notebooks/datasets/: adults_control.csv  adults_syn_ctgan.csv
src/anonymeter/evaluators/: __init__.py  inference_evaluator.py  linkability_evaluator.py  singling_out_evaluator.py
src/anonymeter/neighbors/: mixed_types_kneighbors.py
src/anonymeter/preprocessing/: transformations.py
src/anonymeter/stats/: confidence.py
tests/: fixtures.py  test_confidence.py  test_inference_evaluator.py  test_linkability_evaluator.py  test_mixed_types_kneigbors.py  test_singling_out_evaluator.py  test_transformations.py  test_type_detection.py
tests/datasets/: adults_ori.csv  adults_syn.csv
