# This file is part of Anonymeter and is released under BSD 3-Clause Clear License.
# Copyright (c) 2022 Anonos IP LLC.
# See https://github.com/statice/anonymeter/blob/main/LICENSE.md for details.
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "anonymeter"
version = "0.0.1"
authors = [
  { name="Statice GmbH", email="hello@statice.ai" },
]
description = "Measure singling out, linkability, and inference risk for synthetic data."
readme = "README.md"
requires-python = "<3.10, >3.7"
license = {file = "LICENSE.md"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

dependencies = [
    "scikit-learn==1.1.1",
    "numpy==1.22.4",
    "pandas==1.4.3",
    "numexpr==2.8.3",
    "joblib==1.1.0",
    "numba==0.55.2",
    "python-stdnum==1.11",
    "regex==2022.6.2",
    "matplotlib==3.5.2",
]

[project.optional-dependencies]
dev = [
    "flake8~=5.0",
    "flake8-docstrings~=1.6.0",
    "flake8-eradicate~=1.4.0",
    "flake8-broken-line~=0.5",
    "flake8-bugbear~=23.2",
    "isort~=5.10",
    "jupyterlab==3.4.3",
    "black~=22.10",
    "pre-commit==2.20.0",
    "pytest==7.1.2",
    "pytest-cov==3.0.0",
    "mypy==0.961",
    "pytest-mypy==0.9.1",
]

[project.urls]
"Homepage" = "https://github.com/statice/anonymeter"
"Bug Tracker" = "https://github.com/statice/anonymeter/issues"

[tool.isort]
profile = "black"
known_first_party = "anonymeter"
line_length = 120
skip = [
    ".git",
    ".vscode",
    ".venv",
    ".pytest_cache",
    ".mypy_cache",
    "__init__.py",
    "build",
    "dist",
    "htmlcov",
]

[tool.black]
line-length = 120
multi-line-output = 3
include-trailing-comma = true

[tool.mypy]
disallow_untyped_defs = false
ignore_missing_imports = true
follow_imports = "silent"
show_column_numbers = true
show_error_context = false
exclude = [
    "docs",
    "tests",
    "build",
    "dist",
    "htmlcov"
]

# Explicitly blacklist modules in use that don't have type stubs
[mypy-pandas]
ignore_missing_imports=true

[mypy-numpy]
ignore_missing_imports=true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::FutureWarning",
    "ignore::PendingDeprecationWarning"
]
testpaths = [
    "tests"
]
pythonpath = [
    "src"
]
xfail_strict=true
