# This file is part of Anonymeter and is released under BSD 3-Clause Clear License.
# Copyright (c) 2022 Anonos IP LLC.
# See https://github.com/statice/anonymeter/blob/main/LICENSE.md for details.
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "anonymeter"
version = "0.0.2"
authors = [
  { name="Statice GmbH", email="hello@statice.ai" },
]
description = "Measure singling out, linkability, and inference risk for synthetic data."
readme = "README.md"
requires-python = "<3.11, >3.7" # limited by Numba support
license = {file = "LICENSE.md"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

dependencies = [
    "scikit-learn~=1.2",
    "numpy >=1.11,<1.24",
    "pandas~=1.4",
    "joblib~=1.2",
    "numba~=0.56",
]

[project.optional-dependencies]
notebooks = [
    "jupyterlab~=3.4",
    "matplotlib~=3.5",
    "seaborn~=0.11",
]

dev = [
    # Linting and code checks
    "flake8~=5.0",
    "flake8-docstrings~=1.6.0",
    "flake8-eradicate~=1.4.0",
    "flake8-broken-line~=0.5",
    "flake8-bugbear~=23.2",
    "pre-commit==2.20.0",
    "mypy~=1.2.0",

    # Code formatting
    "isort~=5.10",
    "black~=22.10",

    # Testing
    "pytest==7.1.2",
    "pytest-cov==3.0.0",

    # Building and packaging
    "build~=0.10",
    "twine~=4.0",
]

[project.urls]
"Homepage" = "https://github.com/statice/anonymeter"
"Bug Tracker" = "https://github.com/statice/anonymeter/issues"
"Changelog" = "https://github.com/statice/anonymeter/blob/main/CHANGELOG.md"

[tool.isort]
profile = "black"
known_first_party = "anonymeter"
line_length = 120
skip = [
    ".git",
    ".vscode",
    ".venv",
    ".pytest_cache",
    ".mypy_cache",
    "__init__.py",
    "build",
    "dist",
    "htmlcov",
]

[tool.black]
line-length = 120
multi-line-output = 3
include-trailing-comma = true

[tool.mypy]
disallow_untyped_defs = false
ignore_missing_imports = true
follow_imports = "silent"
show_column_numbers = true
show_error_context = false
exclude = [
    "docs",
    "tests",
    "build",
    "dist",
    "htmlcov"
]

# Explicitly blacklist modules in use that don't have type stubs
[mypy-pandas]
ignore_missing_imports=true

[mypy-numpy]
ignore_missing_imports=true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::FutureWarning",
    "ignore::PendingDeprecationWarning"
]
testpaths = [
    "tests"
]
pythonpath = [
    "src"
]
xfail_strict=true
