# This file is part of Anonymeter and is released under BSD 3-Clause Clear License.
# Copyright (c) 2022 Anonos IP LLC.
# See https://github.com/statice/anonymeter/blob/main/LICENSE.md for details.
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "anonymeter"
version = "1.0.0"
authors = [
  { name="Statice GmbH", email="hello@statice.ai" },
]
description = "Measure singling out, linkability, and inference risk for synthetic data."
readme = "README.md"
requires-python = "<3.12, >3.7" # limited by Numba support
license = {file = "LICENSE.md"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

dependencies = [
    "scikit-learn~=1.2",
    "numpy >=1.22, <1.27", # limited by Numba support
    "pandas>=1.4",
    "joblib~=1.2",
    "numba~=0.58",
]

[project.optional-dependencies]
notebooks = [
    "jupyterlab~=3.4",
    "matplotlib~=3.5",
    "seaborn~=0.11",
]

dev = [
    # Linting and formatting
    "ruff~=0.1.14",
    "mypy~=1.8.0",

    # Pre-commit checks
    "pre-commit~=3.5",

    # Testing
    "pytest~=7.4",

    # Building and packaging
    "build~=0.10",
    "twine~=4.0",
]

[project.urls]
"Homepage" = "https://github.com/statice/anonymeter"
"Bug Tracker" = "https://github.com/statice/anonymeter/issues"
"Changelog" = "https://github.com/statice/anonymeter/blob/main/CHANGELOG.md"

[tool.ruff]
# https://docs.astral.sh/ruff/configuration/

line-length = 120

select = [
    "B",    # https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "C4",   # https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
    "E4",   # https://docs.astral.sh/ruff/rules/#error-e
    "E7",
    "E9",
    "NPY",
    "F",    # https://docs.astral.sh/ruff/rules/#pyflakes-f
    "I001", # isort
    "W",    # https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
    "YTT",  # https://docs.astral.sh/ruff/rules/#flake8-2020-ytt
    "PGH",  # https://docs.astral.sh/ruff/rules/#pygrep-hooks-pgh
    "PIE",  # https://docs.astral.sh/ruff/rules/#flake8-pie-pie
    "UP",   # https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "RUF",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.isort]
known-first-party = ["anonymeter"]
forced-separate = ["tests"]

[tool.ruff.lint]
extend-select = ["NPY201"]
preview = true

[tool.mypy]
ignore_missing_imports = true
follow_imports = "silent"
show_column_numbers = true
check_untyped_defs = true
show_error_context = false
exclude = [
    "docs",
    "build",
    "dist",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::FutureWarning",
    "ignore::PendingDeprecationWarning",
]
testpaths = [
    "tests",
]
pythonpath = [
    "src",
]
xfail_strict=true
